@@ -4,7 +4,7 @@
 
 pkgname=subversion
 pkgver=1.6.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Replacement for CVS, another versioning system (svn)"
 arch=(i686 x86_64)
 license=('apache' 'bsd')
@@ -71,11 +71,12 @@ build() {
    install -m 755 $startdir/src/svnserve $startdir/pkg/etc/rc.d
    install -m 644 $startdir/src/svn $startdir/pkg/etc/xinetd.d
    install -m 644 $startdir/src/svnserve.conf $startdir/pkg/etc/conf.d/svnserve
-   install -m 755 $startdir/src/subversion-$pkgver/contrib/client-side/svnmerge/svnmerge.py $startdir/pkg/usr/bin/svnmerge
+   #install -m 755 $startdir/src/subversion-$pkgver/contrib/client-side/svnmerge/svnmerge.py $startdir/pkg/usr/bin/svnmerge
+   install -m 755 $startdir/src/svnmerge.py $startdir/pkg/usr/bin/svnmerge
    install -D -m 644 $startdir/src/subversion-$pkgver/COPYING $startdir/pkg/usr/share/licenses/$pkgname/LICENSE
 }
 md5sums=('32014fe70397357fa1e0ef8f937a0232'
          'c5a2e490b3e58c6bd2ca3a2e72b71845'
          'a0db6dd43af33952739b6ec089852630'
          'c459e299192552f61578f3438abf0664'
-         '9540c341d669b3cdc27dcf2d36727aee')
+         '21bf3aa5b797ce98eba8307f30e9c070')
